--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeLibrary</title>
-    <link rel="shortcut icon" href="/asset/img/home/Favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/asset/css/homeStyle.css">
+    <link rel="shortcut icon" href="/assets/img/home/Favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/assets/css/homeStyle.css">
     
 
         <!-- bootstrap css -->
